package edu.uees.tutorias.domain;

/**
 * Modalidad en la que se realiza una tutoria. Campo opcional de Reserva
 * (ver ReservaBuilder); por defecto una tutoria es PRESENCIAL.
 */
public enum ModalidadTutoria {
    PRESENCIAL,
    VIRTUAL
}
